# ffi_test

./: .gitignore  Cargo.toml  build.rs
c/: build.sh  hello.lib  helloc.lib  main.c  main.wasm
cpp/: build.sh  hellocpp.lib  main.cpp
go/: build.sh  go.mod  hello  hellogo  hellogo.h  hellogo.lib  main.go  main.h  main.lib  main.wasm
notes/: notes.md
rust/: build.sh  main.wasm
src/: main.rs
tools/: get-wasi-sdk.sh
wasm/: hello.wat
